# rexml

./: Cargo.toml  README.md
crates/dom/: Cargo.toml
crates/dom/benches/: primitives.rs
crates/dom/src/: arena.rs  comment.rs  document.rs  dom_api.rs  errors.rs  lib.rs  namespace.rs  node.rs  object.rs  primitives.rs  qname.rs
crates/dom/src/dom/: attr.rs  el.rs  mod.rs  tree.rs
crates/encoding/: Cargo.toml
crates/encoding/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: block.rs  character.rs  ebnf.rs  errors.rs  lib.rs  sax.rs  str.rs  symbols.rs
crates/parser/src/testdata/: pi.xml
crates/parserc/: Cargo.toml  README.md
crates/parserc/src/: errors.rs  input.rs  inputs.rs  lib.rs  parser.rs  parsers.rs  utils.rs
crates/parserc/src/bytes/: mod.rs  search.rs  tag.rs
crates/parserc/src/chars/: mod.rs  none_of.rs  one_of.rs  satisfy.rs
crates/parserc/src/combinator/: alt.rs  iter.rs  map.rs  mod.rs  opt.rs  select.rs  take.rs  tuple.rs
crates/stax/: Cargo.toml
crates/stax/src/: lib.rs  reader.rs
crates/stax/src/parser/: input.rs  lexer.rs  mod.rs
