[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.1"

[workspace.dependencies]
log = { version = "^0.4" }
pretty_env_logger = "^0.5"
thiserror = "^1.0"
futures-test = "^0.3"
futures = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
no-std-compat = { version = "^0.4", features = ["alloc"] }
nom = "^7.1"
divan = "0.1.14"
ringbuf-rs = "^0.2"
quickcheck = "^1.0.3"
quickcheck_macros = "^1"
#rexml
rexml-encoding = { path = "./crates/encoding", version = "^0.1" }
rexml-dom = { path = "./crates/dom", version = "^0.1" }
