[package]
description = "A low level DOM  Level 2 Core Specification implementation with arena memory managerment"
documentation = "https://docs.rs/rexml-dom"
edition.workspace = true
license = "MIT"
name = "rexml-dom"
repository = "https://github.com/HalaOS/rexml.git"
version.workspace = true

[dependencies]
no-std-compat = { workspace = true }
rexml-encoding = { workspace = true }
thiserror = { workspace = true }
nom = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[features]
default = ["std"] # Default to using the std
std = ["no-std-compat/std", "rexml-encoding/std"]

[[bench]]
name = "primitives"
harness = false
