[package]
description = "A xml document parser with sax backend."
documentation = "https://docs.rs/rexml-parser"
license = "MIT"
name = "rexml-parser"
repository = "https://github.com/HalaOS/rexml.git"
version.workspace = true
edition.workspace = true

[dependencies]
no-std-compat = { workspace = true }
thiserror = { workspace = true }
rexml-encoding = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[features]
default = ["std"] # Default to using the std
std = ["no-std-compat/std", "rexml-encoding/std"]
