[package]
description = "Asynchronous-compatible parser combinator library for rust language."
documentation = "https://docs.rs/parserc"
license = "MIT"
name = "parserc"
repository = "https://github.com/HalaOS/rexml.git"
version.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
futures = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
futures-test = { workspace = true }
futures = { workspace = true, features = ["executor", "thread-pool"] }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
