[package]
description = "Streaming API for XML(StAX)"
documentation = "https://docs.rs/rexml-stax"
license = "MIT"
name = "rexml-stax"
repository = "https://github.com/HalaOS/rexml.git"
version.workspace = true
edition.workspace = true

[dependencies]
no-std-compat = { workspace = true }
thiserror = { workspace = true }
rexml-encoding = { workspace = true }
futures = { workspace = true }
ringbuf-rs = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[features]
default = ["std"] # Default to using the std
std = ["no-std-compat/std", "rexml-encoding/std"]
